[project]
name = "ragdemo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.11.0.post1",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "ollama>=0.5.1",
    "pymupdf>=1.26.3",
    "sentence-transformers>=5.0.0",
    "streamlit>=1.46.1",
]
